# ExplodeForExplode

./: .clang-format  CMakeLists.txt  LICENSE  README.md
assets/shaders/: dynamite_shader.vert  pond.frag  pond.vert  shader.frag  shader.fs  shader.vert  shader.vs  world.frag  world.vert
src/: main.cpp
src/core/: drawable.hpp  exception.hpp  logger.cpp  logger.hpp  rand.cpp  rand.hpp  renderer.cpp  renderer.hpp  sizeable.hpp  types.hpp  utils.cpp  utils.hpp  window.cpp  window.hpp
src/core/decoders/: png.cpp  png.hpp
src/core/input/: mouse.hpp
src/game/: movement.cpp  movement.hpp  movement.tpp  world.cpp  world.hpp  zooming.cpp  zooming.hpp
src/game/blocks/: block.cpp  block.hpp  block_data.hpp  block_id.cpp  block_id.hpp  blocks.cpp  blocks.hpp
src/game/dynamites/: dynamite.cpp  dynamite.hpp
src/game/utils/: data_2d.hpp  data_2d_impl.hpp
src/game/world/: world.cpp  world.hpp  world_data.cpp  world_data.hpp
src/game/world/blocks/: block.cpp  block.hpp  block_data.hpp  block_id.cpp  block_id.hpp  blocks.cpp  blocks.hpp
src/game/world/generators/: plain_world_generator.cpp  plain_world_generator.hpp  plain_world_generator_settings.cpp  structures_generator.cpp  structures_generator.hpp
src/game/world/structures/: grass.cpp  pond.cpp  structure.cpp  structure.hpp  structure_id.cpp  structure_id.hpp  structures.hpp  tree.cpp
src/game/world_generators/: plain_world_generator.cpp  plain_world_generator.hpp  plain_world_generator_settings.cpp  world_data.cpp  world_data.hpp
src/game/world_generators/structures/: structure.cpp  structure.hpp  structure_id.cpp  structures.hpp  tree.cpp
src/math/: movement.cpp  movement.hpp  zooming.cpp  zooming.hpp
src/math/matrix/: matrix.cpp  matrix.hpp  projection_matrix.cpp  view_matrix.cpp
src/opengl/: ctx.hpp  drawable.hpp  mesh.cpp  mesh.hpp  opengl.cpp  opengl.hpp  texture.hpp
src/opengl/math/: math.cpp  math.hpp  matrix.cpp  matrix.hpp  projection_matrix.cpp  view_matrix.cpp
src/opengl/shading/: shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  uniforms.hpp
src/opengl/window/: camera.cpp  camera.hpp  mouse.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt
tests/src/core/: png.cpp  utils.cpp
tests/src/core/decoders/: png.cpp
tests/src/game/: data_2d.cpp  movement.cpp  zooming.cpp
tests/src/game/plain_world_generator/: basic.cpp  misc.cpp  structures.cpp
tests/src/game/world_generators/: plain_world_generator.cpp
tests/src/math/: movement.cpp  view_matrix.cpp  zooming.cpp
tests/src/opengl/math/: math.cpp  matrix.cpp
